--- a/lectures/live/04 - Random walks.ipynb
+++ b/lectures/live/04 - Random walks.ipynb
@@ -14967,6 +14967,9 @@
      },
      "execution_count": 41,
      "metadata": {
+      "@webio": {
+       "kernelId": "c73e1c83-fc82-45f1-98fa-74cf0fdead6c"
+      },
       "application/vnd.webio.node+json": {
        "kernelId": "66fe07bd-3541-42e5-801e-52796c26a1c6"
       }
@@ -15285,6 +15288,9 @@
      },
      "execution_count": 45,
      "metadata": {
+      "@webio": {
+       "kernelId": "c73e1c83-fc82-45f1-98fa-74cf0fdead6c"
+      },
       "application/vnd.webio.node+json": {
        "kernelId": "66fe07bd-3541-42e5-801e-52796c26a1c6"
       }
@@ -15454,7 +15460,10 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -18094,8 +18103,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "907ff770df3a458e9c354b244c122a16",
-   "lastKernelId": "66fe07bd-3541-42e5-801e-52796c26a1c6"
+   "lastCommId": "bfba2f80-15cb-4625-9a0b-afd084812a47",
+   "lastKernelId": "c73e1c83-fc82-45f1-98fa-74cf0fdead6c"
   },
   "kernelspec": {
    "display_name": "Julia 1.4.0",
