--- a/lectures/live/mine/04 - Random walks.ipynb
+++ b/lectures/live/mine/04 - Random walks.ipynb
@@ -2870,69 +2870,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
+      "└ @ Base loading.jl:1260\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<script>\n",
-       "// Immediately-invoked-function-expression to avoid global variables.\n",
-       "(function() {\n",
-       "    var warning_div = document.getElementById(\"webio-warning-10839366916295670348\");\n",
-       "    var hide = function () {\n",
-       "        var script = document.getElementById(\"webio-setup-6629036918541269415\");\n",
-       "        var parent = script && script.parentElement;\n",
-       "        var grandparent = parent && parent.parentElement;\n",
-       "        if (grandparent) {\n",
-       "            grandparent.style.display = \"none\";\n",
-       "        }\n",
-       "        warning_div.style.display = \"none\";\n",
-       "    };\n",
-       "    if (typeof Jupyter !== \"undefined\") {\n",
-       "        console.log(\"WebIO detected Jupyter notebook environment.\");\n",
-       "        // Jupyter notebook.\n",
-       "        var extensions = (\n",
-       "            Jupyter\n",
-       "            && Jupyter.notebook.config.data\n",
-       "            && Jupyter.notebook.config.data.load_extensions\n",
-       "        );\n",
-       "        if (extensions && extensions[\"webio-jupyter-notebook\"]) {\n",
-       "            // Extension already loaded.\n",
-       "            console.log(\"Jupyter WebIO nbextension detected; not loading ad-hoc.\");\n",
-       "            hide();\n",
-       "            return;\n",
-       "        }\n",
-       "    } else if (window.location.pathname.includes(\"/lab\")) {\n",
-       "        // Guessing JupyterLa\n",
-       "        console.log(\"Jupyter Lab detected; make sure the @webio/jupyter-lab-provider labextension is installed.\");\n",
-       "        hide();\n",
-       "        return;\n",
-       "    }\n",
-       "})();\n",
-       "\n",
-       "</script>\n",
-       "<p\n",
-       "    id=\"webio-warning-10839366916295670348\"\n",
-       "    class=\"output_text output_stderr\"\n",
-       "    style=\"padding: 1em; font-weight: bold;\"\n",
-       ">\n",
-       "    Unable to load WebIO. Please make sure WebIO works for your Jupyter client.\n",
-       "    For troubleshooting, please see <a href=\"https://juliagizmos.github.io/WebIO.jl/latest/providers/ijulia/\">\n",
-       "    the WebIO/IJulia documentation</a>.\n",
-       "    <!-- TODO: link to installation docs. -->\n",
-       "</p>\n"
-      ],
       "text/plain": [
-       "HTML{String}(\"<script>\\n// Immediately-invoked-function-expression to avoid global variables.\\n(function() {\\n    var warning_div = document.getElementById(\\\"webio-warning-10839366916295670348\\\");\\n    var hide = function () {\\n        var script = document.getElementById(\\\"webio-setup-6629036918541269415\\\");\\n        var parent = script && script.parentElement;\\n        var grandparent = parent && parent.parentElement;\\n        if (grandparent) {\\n            grandparent.style.display = \\\"none\\\";\\n        }\\n        warning_div.style.display = \\\"none\\\";\\n    };\\n    if (typeof Jupyter !== \\\"undefined\\\") {\\n        console.log(\\\"WebIO detected Jupyter notebook environment.\\\");\\n        // Jupyter notebook.\\n        var extensions = (\\n            Jupyter\\n            && Jupyter.notebook.config.data\\n            && Jupyter.notebook.config.data.load_extensions\\n        );\\n        if (extensions && extensions[\\\"webio-jupyter-notebook\\\"]) {\\n            // Extension already loaded.\\n            console.log(\\\"Jupyter WebIO nbextension detected; not loading ad-hoc.\\\");\\n            hide();\\n            return;\\n        }\\n    } else if (window.location.pathname.includes(\\\"/lab\\\")) {\\n        // Guessing JupyterLa\\n        console.log(\\\"Jupyter Lab detected; make sure the @webio/jupyter-lab-provider labextension is installed.\\\");\\n        hide();\\n        return;\\n    }\\n})();\\n\\n</script>\\n<p\\n    id=\\\"webio-warning-10839366916295670348\\\"\\n    class=\\\"output_text output_stderr\\\"\\n    style=\\\"padding: 1em; font-weight: bold;\\\"\\n>\\n    Unable to load WebIO. Please make sure WebIO works for your Jupyter client.\\n    For troubleshooting, please see <a href=\\\"https://juliagizmos.github.io/WebIO.jl/latest/providers/ijulia/\\\">\\n    the WebIO/IJulia documentation</a>.\\n    <!-- TODO: link to installation docs. -->\\n</p>\\n\")"
+       "Plots.GRBackend()"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "using Interact"
+    "using Interact\n",
+    "using Plots\n",
+    "backend()"
    ]
   },
   {
@@ -6397,8 +6360,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "03794fb3-04eb-4aee-8a76-5af01c08b661",
-   "lastKernelId": "426a7c8c-0568-4a52-b053-8e46841081bb"
+   "lastCommId": "b9673062-41ce-4722-afe3-91119710ad5b",
+   "lastKernelId": "4f68b85d-13d0-4c65-a676-fe8cebc3c2d9"
   },
   "kernelspec": {
    "display_name": "Julia 1.4.0",
